updated API url

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "API":{
-        "baseUrl": "https://sandbox.eu-de.mybluemix.net"
+        "baseUrl": "https://sandbox.apis.op-palvelut.fi/"
     }
 }
