--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "API":{
-        "baseUrl": "https://sandbox.apis.op-palvelut.fi/"
+    "API": {
+        "baseUrl": "https://sandbox.apis.op-palvelut.fi"
     }
 }
