Updated base URL to new address

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "API": {
-        "baseUrl": "https://sandbox.apis.op-palvelut.fi"
+        "baseUrl": "https://sandbox.apis.op.fi"
     }
 }
